[package]
name = "siren"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# --- UBAH DEPENDENSI INI KE VERSI TERBARU ---
worker = "0.10.1"
getrandom = { version = "0.2", features = ["js"] }
uuid = "1.8.0"
aes-gcm = "0.10"
sha2 = "0.10"
reqwest = "0.12.5"
regex = "1.11.1"

# --- DEPENDENSI LAINNYA BIARKAN/SESUAIKAN ---
serde_json = "1.0"
base64 = "0.22"
futures-util = "0.3.28"
pin-project-lite = "0.2"
bytes = "1.4.0"
aes = "0.8"
md-5 = "0.10"
anyhow = "1.0.86"
once_cell = "1.19.0" # once_cell juga diupdate
pretty-bytes = "0.2.2"
tokio = { version = "1.28", features = ["io-util", "rt"] }

# --- BAGIAN INI BISA DIHAPUS JIKA ADA, KARENA WRANGLER MENANGANINYA ---
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false
